updating open api spec and other stuf
