# BE/src/modules/users/user.route.ts
@@ -1,10 +1,12 @@
 import { Router } from "express";
+import { asyncHandler } from "../../middleware";
 import * as controller from "./user.controller";
 import { requireAuth } from "../../middleware/auth";
 
 const router = Router();
 
 router.get("/me", requireAuth, controller.me);
+router.patch("/me", requireAuth, asyncHandler(controller.patchMe));
 router.get("/me/schedule", requireAuth, controller.mySchedule);
 router.get("/", controller.list);
 router.get("/:id", controller.getById);
